# macos-peek-mcp

./: .gitignore  LICENSE  README.md  build.sh  install.sh  peek-mcp.spec  pyproject.toml  uninstall.sh
scripts/: spike_ax_window.py
src/peek/: __init__.py  __main__.py  ax.py  cli.py  denylist.py  entry.py  envelope.py  permissions.py  server.py  windows.py
src/peek/data/: default-denylist.toml
tests/: conftest.py  test_ax_find_window.py  test_ax_value_coercion.py  test_ax_walker.py  test_cli.py  test_denylist.py  test_envelope.py  test_grep_logic.py  test_integration.py  test_permissions.py  test_server_errors.py  test_window_filter.py
